maybe fixed logo not showing on heroku?

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -31,7 +31,21 @@ header {
     box-shadow: inset 0 0 10px rgba(0,0,0,.1);
     padding: 6px 10px;
     box-sizing: border-box;
+    margin-top:10px;
+}
+
+#logo {
+    width: 100%;
+    background-color:#eaeaea;
+    box-sizing: border-box;
+}
+
+#logoimg {
+    width: 200px;
     margin-top:20px;
+    margin-left:10px;
+    padding:  10px;
+
 }
 
 .search-bar {
